--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
   "name": "karteji-portal-black-glass",
-  "version": "4.4.0",
+  "version": "4.5.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.12.1",
     "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "clsx": "^2.1.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "firebase": "10.12.2"
   }
 }
